{
    "name": "OrcInputControls",
    "maps": [
        {
            "name": "Touch",
            "id": "0d62271e-0da1-4638-b7f0-405be8065ced",
            "actions": [
                {
                    "name": "PrimaryFingerPosition",
                    "type": "Value",
                    "id": "b6ced3e4-cf07-48c2-8c8e-9179d3bdf05c",
                    "expectedControlType": "Vector2",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": true
                },
                {
                    "name": "SecondaryFingerPosition",
                    "type": "Value",
                    "id": "8380a656-7c6f-4218-83ad-b1f8993c8097",
                    "expectedControlType": "Vector2",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": true
                },
                {
                    "name": "SecondaryFingerContact",
                    "type": "Button",
                    "id": "3fcf6c43-7159-4ef5-9ac0-54ced3e41d9d",
                    "expectedControlType": "Button",
                    "processors": "",
                    "interactions": "Press",
                    "initialStateCheck": false
                }
            ],
            "bindings": [
                {
                    "name": "",
                    "id": "4d2ba0c8-5568-4f15-8f75-db915bef66bd",
                    "path": "<Touchscreen>/touch0/position",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "PrimaryFingerPosition",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "64d98b44-afdc-4d62-ab16-5e8d4c745a55",
                    "path": "<Touchscreen>/touch1/position",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "SecondaryFingerPosition",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "0cf57857-983b-4d09-8f9e-d70214de8669",
                    "path": "<Touchscreen>/touch1/press",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "SecondaryFingerContact",
                    "isComposite": false,
                    "isPartOfComposite": false
                }
            ]
        },
        {
            "name": "Keyboard",
            "id": "aaf213b1-4ccc-41c9-a712-8bd4d910f0b5",
            "actions": [
                {
                    "name": "ScrollZoom",
                    "type": "Value",
                    "id": "41a18ba4-f4bb-422f-bfe4-c5efd9134cba",
                    "expectedControlType": "Axis",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": true
                }
            ],
            "bindings": [
                {
                    "name": "",
                    "id": "16798031-cb9c-4bd8-92a9-6b62618e3b77",
                    "path": "<Mouse>/scroll/y",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "ScrollZoom",
                    "isComposite": false,
                    "isPartOfComposite": false
                }
            ]
        }
    ],
    "controlSchemes": []
}